# regex-engine

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
examples/: example_counting.cpp  example_matching.cpp
include/regex/: ast.hpp  dfa.hpp  nfa.hpp  parser.hpp  regex_engine.hpp
src/: dfa.cpp  nfa.cpp  parser.cpp  regex_engine.cpp
tests/: test_dfa.cpp  test_matching.cpp  test_nfa.cpp  test_parser.cpp
